View Issue Details

IDProjectCategoryView StatusLast Update
0023241Open CASCADEOCCT:DRAWpublic2013-04-29 15:21
Reporterkgv Assigned Tokgv  
PrioritynormalSeveritycrash 
Status closedResolutionfixed 
PlatformMacOSMac OS X 
Product Version6.5.3 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023241: DRAWEXE crash on startup in Mac OS X
DescriptionDraw Harness fail to start on Mac OS X platform when linked against system Tcl/Tk libraries:

*** Abort *** an exception was raised, but no catch was found.
... The exception is:SIGSEGV 'segmentation violation' detected. Address ffffffc14c8e8850

Draw_Window.cxx, 1071:
> Draw_WindowDisplay = Tk_Display(mainWindow);
But system library doesn't uses XLib and returned pointer is somewhat different (but not NULL).
TagsNo tags attached.
Test case numberNot needed

Activities

dbv

2012-09-27 13:15

developer   ~0021580

Last edited: 2012-09-27 15:32

The value returned by Tk_Display was a pointer to Display structure defined in system Tcl/Tk libraries. This structure differs from structure defined in X11 library. Replaced Tk_Display with XOpenDisplay.

Also changed the sequence of linkage (it was the reason of problems with events handling), fixed Code Blocks projects files generation and added minor fixes to the scripts.

Please, review git occt branch CR23241 and git occt-wok branch CR23241

kgv

2012-09-27 14:55

developer   ~0021584

Draw_Window.cxx
>Draw_WindowDisplay = XOpenDisplay(NULL);//Tk_Display(mainWindow);
Please add problem description into the sources (why we don't use Tk_Display) instead of just commenting old code.

dbv

2012-09-27 15:31

developer   ~0021585

Added description. Please review.

kgv

2012-10-17 15:19

developer   ~0021819

Both branches were reviewed and remarks applied.

mkv

2012-10-31 16:39

tester   ~0022035

Dear BugMaster,
Branch CR23241 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
Not needed

bugmaster

2012-11-30 10:33

administrator   ~0022474

Fix has been checked on MacOS platform.
DRAWEXE starts successfully.

Related Changesets

occt: master 4ad91217

2012-11-30 12:01:48

kgv

Details Diff
0023241: DRAWEXE crash on startup in Mac OS X

Fixing problem with Draw starting
Added problem description into the sources.
Cosmetic fix. Replaced tabs with spaces.
Affected Issues
0023241
mod - src/Draw/Draw_Window.cxx Diff File

Issue History

Date Modified Username Field Change
2012-07-04 10:15 kgv New Issue
2012-07-04 10:15 kgv Assigned To => dbv
2012-09-27 13:15 dbv Note Added: 0021580
2012-09-27 13:15 dbv Assigned To dbv => kgv
2012-09-27 13:15 dbv Status new => resolved
2012-09-27 14:55 kgv Note Added: 0021584
2012-09-27 15:31 dbv Note Added: 0021585
2012-09-27 15:32 dbv Note Edited: 0021580
2012-10-02 11:09 abv Target Version 6.5.4 => 6.6.0
2012-10-17 15:19 kgv Note Added: 0021819
2012-10-17 15:19 kgv Assigned To kgv => bugmaster
2012-10-17 15:19 kgv Status resolved => reviewed
2012-10-17 16:12 mkv Assigned To bugmaster => mkv
2012-10-31 16:39 mkv Note Added: 0022035
2012-11-30 10:33 bugmaster Note Added: 0022474
2012-11-30 10:33 bugmaster Assigned To mkv => bugmaster
2012-11-30 10:33 bugmaster Status reviewed => tested
2012-11-30 13:55 bugmaster Test case number => Not needed
2012-12-04 13:21 kgv Changeset attached => occt master 4ad91217
2012-12-04 13:21 kgv Assigned To bugmaster => kgv
2012-12-04 13:21 kgv Status tested => verified
2012-12-04 13:21 kgv Resolution open => fixed
2012-12-10 17:16 kgv Changeset attached => occt master 4ad91217
2013-04-23 13:37 aiv Status verified => closed
2013-04-29 15:21 aiv Fixed in Version => 6.6.0