0023241: DRAWEXE crash on startup in Mac OS X

Fixing problem with Draw starting
Added problem description into the sources.
Cosmetic fix. Replaced tabs with spaces.